feat: 实现完整的API限流机制
- 新增基于Redis的分布式限流系统
  - 支持滑动窗口、令牌桶、固定窗口三种限流算法
  - 支持IP、用户、全局、IP+用户组合等多种限流维度
  - 使用Lua脚本保证限流检查的原子性

- 核心组件：
  - @RateLimit注解：声明式限流注解
  - RateLimitAspect：AOP切面实现限流拦截
  - RateLimiter：限流工具类，实现限流算法
  - RedisConfig：Redis配置支持
  - RateLimitException：限流异常处理

- 在关键接口上应用限流：
  - 认证接口：注册5次/分钟，登录10次/分钟
  - 文件上传：20次/分钟，使用令牌桶算法
  - 搜索接口：50次/分钟

- 其他优化：
  - 修复编译错误和类型安全问题
  - 优化SecurityConfig配置
  - 添加详细的限流使用文档

- 清理不再需要的部署相关文件